# motion_planning_ws

./: .gitignore  AGENTS.md  README.md  build_host.sh  build_robot.sh  deployment_checklist.md  host_robot_code_split.md  planner_migration_param_compare.md  shape_assembly_real_robot_protocol.md
codex-logs/: 20260320T011056Z.md  20260320T092221Z.md  20260320T094146Z.md  20260320T100341Z.md  20260321T073934Z.md  20260322T024605Z.md  20260322T030338Z.md  20260322T033225Z.md  20260322T042112Z.md  20260322T042829Z.md  20260322T044257Z.md  20260322T053903Z.md  20260322T060201Z.md  20260322T060727Z.md  20260322T065323Z.md  20260322T070550Z.md  20260322T072852Z.md  20260322T110940Z.md  20260322T123603Z.md
src/fm2_gather/: AGENTS.md  CMakeLists.txt  package.xml
src/fm2_gather/config/: gather_param.yaml
src/fm2_gather/launch/: gather.launch  laun.launch  map_combine.launch  record.launch
src/fm2_gather/msg/: map.msg
src/fm2_gather/script/: path_record.py  path_record_sim.py
src/fm2_gather/src/: fm2_gather_node.cpp  fm2_map_combine_node.cpp  map_test_node.cpp  move_base_controller.cpp
src/formation_host/: CMakeLists.txt  package.xml
src/formation_host/launch/: formation_host.launch
src/formation_host/scripts/: shape_task_supervisor.py
src/formation_msgs/: CMakeLists.txt  package.xml
src/formation_msgs/msg/: RobotFormationStatus.msg  ShapeTask.msg
src/formation_robot/: CMakeLists.txt  package.xml
src/formation_robot/launch/: formation_robot.launch
src/formation_robot/scripts/: shape_task_bridge.py
src/move_base_client/: CMakeLists.txt  package.xml
src/move_base_client/config/: move_base_client_param.yaml  param.yaml  plan_monitor_param.yaml
src/move_base_client/launch/: laun.launch
src/move_base_client/scripts/: 2move_base_client.py  (+4 more)
src/ros_motion_planning/src/core/global_planner/graph_planner/: CMakeLists.txt  package.xml
src/ros_motion_planning/src/core/global_planner/graph_planner/cfg/: FM2Planner.cfg
src/ros_motion_planning/src/core/global_planner/graph_planner/include/: a_star_my.h  fm2_planner.h  fm2star_planner.h
src/ros_motion_planning/src/core/global_planner/graph_planner/include/fastmarching/fm2/: fastmarching2.hpp  fastmarching2star.hpp
src/ros_motion_planning/src/core/global_planner/graph_planner/include/fastmarching/fmm/: fastmarching.hpp
src/ros_motion_planning/src/core/global_planner/graph_planner/include/fastmarching/fmm/fmdata/: fmcell.h
src/ros_motion_planning/src/core/global_planner/graph_planner/include/fastmarching/gradientdescent/: gradientdescent.hpp
src/ros_motion_planning/src/core/global_planner/graph_planner/include/fastmarching/io/: gridplotter.hpp
src/ros_motion_planning/src/core/global_planner/graph_planner/include/fastmarching/ndgridmap/: cell.h  ndgridmap.hpp
src/ros_motion_planning/src/core/global_planner/graph_planner/src/: a_star_my.cpp  fm2_planner.cpp  fm2star_planner.cpp  graph_planner.cpp
src/ros_motion_planning/src/sim_env/: CMakeLists.txt  package.xml
src/ros_motion_planning/src/sim_env/cfg/: ShapeAssemblySwarm.cfg
src/ros_motion_planning/src/sim_env/config/: move_base_params.yaml  shape_assembly.yaml
src/ros_motion_planning/src/sim_env/config/costmap/: global_costmap_params.yaml  global_costmap_plugins.yaml  local_costmap_params.yaml
src/ros_motion_planning/src/sim_env/config/mini_mec/: costmap_common_params_mini_mec.yaml
src/ros_motion_planning/src/sim_env/config/planner/: dwa_planner_params.yaml  dwa_planner_params0.yaml  graph_planner_params.yaml  mpc_planner_params.yaml  my_local_planner_params.yaml
src/ros_motion_planning/src/sim_env/config/turtlebot3_waffle/: costmap_common_params_turtlebot3_waffle.yaml
src/ros_motion_planning/src/sim_env/config/wheeltec/: costmap_common_params_wheeltec.yaml
src/ros_motion_planning/src/sim_env/launch/: mb6.launch
src/ros_motion_planning/src/sim_env/launch/app/: shape_assembly.launch.xml  shape_assembly_distributed.launch.xml
src/ros_motion_planning/src/sim_env/launch/include/navigation/: move_base.launch.xml
src/ros_motion_planning/src/sim_env/scripts/: shape_assembly_swarm.py
src/ros_motion_planning/src/sim_env/shape_images/: Image_rectangle.mat  Image_rectangle1.mat  Image_rectangle2.mat  Image_rectangle3.mat  Image_sphere.mat  Image_sphere1.mat  Image_triangle.mat
(+73 files in other folders)
